fix(layout): fix me/analytics layout; fix editor spacing

--- a/src/components/Editor/Article/Title/styles.module.css
+++ b/src/components/Editor/Article/Title/styles.module.css
@@ -1,4 +1,10 @@
 .editorTitle {
+  margin: 0 0 var(--spacing-base);
+
+  @media (--sm-up) {
+    margin: var(--spacing-base) 0;
+  }
+
   & input {
     margin-bottom: var(--spacing-base);
     font-size: var(--font-size-article-title);
